2010-05-01  James Youngman  <jay@gnu.org>

	Put the gnulib code, etc. into ./gl
	* bootstrap.conf (doc_base): Override doc_base, m4_base,
	source_base, tests_base, local_gl_dir.
	(gnulib_mk): Use Makefile.am, not gnulib.mk.
	(gnulib_tool_option_extras): Tests are in gl/tests.
	(bootstrap_epilogue): Use gl/tests/Makefile.am, not gnulib-tests/gnulib.mk.

	* configure.ac (SUBDIRS): Rename the gnulib source directory from
	lib to gl/lib.
	(AC_CONFIG_FILES): generate gl/Makefile gl/lib/Makefile
	gl/doc/Makefile gl/tests/Makefile.
	* Makefile.am (AM_CPPFLAGS): Pass -I gl/lib.
	* bsd/Makefile.am (AM_CPPFLAGS): Pass -I ../gl/lib.

	Adopt the use of the first gnulib module: dirent.
	* gnulib-tests/.gitignore: Ignore gnulib test files (since they're
	imported rather than checked into git).
	* lib/.gitignore: Ignore gnulib source files (for the same reason).
	* configure.ac (AC_CONFIG_FILES): generate lib/Makefile.a
	* Makefile.am (SUBDIRS): Add "lib", which is where the gnulib code is.

	* bsd/sccs.c: Remove HAVE_XXX_H header guards.
	Include dirent-safer.h.  Remove the hand-hacked dirent portability
	macros (and remove NAMLEN as a side-effect).
	(do_clean): Don't assume the NAMLEN macro is defined.
	* file.cc: Include dirent-safer.h.  Remove the hand-hacked dirent
	portability macros (and remove NAMLEN as a side-effect).
	(is_directory): Move this function here from fileiter.cc.
	* fileiter.cc: Include dirent-safer.h.  Remove the hand-hacked
	dirent portability macros (and remove NAMLEN as a side-effect).

	Show the value of $(VALGRIND) at the start of regression testing.
	* tests/Makefile.am (test-initial): echo $(VALGRIND).
	
	Add unit test verifying that we don't read uninitialised data in encode.
	* unit-tests/test_encoding2.cc: New unit test file.  Verifies that
	we don't read uninitialised data when we reach the end of the
	encoding input.
	* unit-tests/Makefile.am (unit_tests): Add test_encoding2.

	Avoid reading uninitialised input.