@@ -1,3 +1,13 @@
+2010-05-02  James Youngman  <jay@gnu.org>
+
+	Clean up core files in the unit test directory.
+	* unit-tests/Makefile.am (COREFILES): Clean up "vgcore.*" files
+	for distclean.
+	* unit-tests/testwrapper.sh.in: Clean up core files once the test
+	is complete, unless the core file signals a valgrind failure.
+	Also inhibit core file generation int he first place (though this
+	probably won't work for valgrind).
+
 2010-05-01  James Youngman  <jay@gnu.org>
 
 	Put the gnulib code, etc. into ./gl
